--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -64,7 +64,7 @@ button {
   height: 42px;
   color: $placeholder-color;
   &:hover{
-    background: lighten($border-color, 10%);
+    opacity: 0.85;
   }
   opacity: $opacity;
 }
