--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -66,10 +66,10 @@ input
   &:-ms-input-placeholder
     color: $placeholder-color
 
-button
+input[type=submit]
   @extend .round-corners
   position: relative
-  top: 8px
+  top: 6px
   clear: both
   padding: 0px
   width: 10%
