--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,6 +5,6 @@
 
 %p Uniqkid is a private non-for-profit recreational facility dedicated to building high quality social skills for those on the special needs spectrum. Center is designed for children and young adults of all ages. We believe that every child can be taught the skills they need for the future through interactive programming utilizing the arts and sciences, sports activities, pet intervention, and virtually connected programs with digital tracking and progress reports. Our goal is to engage everyone who walks through our doors by targeting realistic concerns and needs. We aim apply our personalized programming to help everyone - be it child or young adult - reach their highest individual potential.
 
-%form
+%form{id: 'signup-form'}
   %input{type: 'email', placeholder: 'Signup for the newsletter'}
-  %button ☺
+  %input{type: 'submit', value: '☺'}
