--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -41,7 +41,7 @@ p
   font-size: 1.3em
   font-weight: 400
 
-input
+input[type=email]
   @extend .round-corners
   margin-top: 4%
   width: 30%
@@ -69,7 +69,7 @@ input
 input[type=submit]
   @extend .round-corners
   position: relative
-  top: 6px
+  top: 7px
   clear: both
   padding: 0px
   width: 10%
