--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -7,4 +7,4 @@
 
 %form{id: 'signup-form'}
   %input{type: 'email', placeholder: 'Signup for the newsletter', required: 'required'}
-  %input{type: 'submit', value: '☺'}
+  %input{type: 'submit', value: '☺', id: 'signup-button'}
