--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -1,8 +1,8 @@
-$background-color: #E74C3C
-$text-color: white
+$background-color: white
+$text-color: #2C3E50
 $border-color: #2C3E50
 $font: 'Josefin Sans', sans-serif
-$placeholder-color: white
+$placeholder-color: #2C3E50
 $opacity: 0.7
 
 .round-corners
@@ -76,7 +76,7 @@ input[type=submit]
   background: $border-color
   border: none
   height: 42px
-  color: $placeholder-color
+  color: white
   font-size: 2em
   &:hover
     opacity: 0.9
