change font color to #007E81

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -1,8 +1,8 @@
 $background-color: white
-$text-color: #2C3E50
-$border-color: #2C3E50
+$text-color: #007E81
+$border-color: #A4D027
 $font: 'Josefin Sans', sans-serif
-$placeholder-color: #2C3E50
+$placeholder-color: #007E81
 $opacity: 0.7
 
 .round-corners
@@ -79,7 +79,7 @@ input[type=submit]
   color: white
   font-size: 2em
   &:hover
-    opacity: 0.9
+    opacity: 0.8
 
 //take away the blue focus border
 *:focus
