--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -29,8 +29,16 @@ body
   color: $text-color
   font-family: $font
 
-img
+#logo
   width: 40%
+
+#social-media
+  margin-top: 2%
+  margin-bottom: 2%
+  img
+    width: 5%
+    margin: 1%
+
 
 p
   margin: 0 auto
