--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -33,17 +33,16 @@ body
   width: 40%
 
 #social-media
-  margin-top: 2%
-  margin-bottom: 2%
+  // margin-top: 2%
+  // margin-bottom: 2%
   img
     width: 4.5%
-    margin: 1%
-
+    margin: 1.5%
 
 p
   margin: 0 auto
   width: 70%
-  margin-top: 2%
+  margin-top: 1%
   word-spacing: 5px
   line-height: 130%
   font-size: 1.3em
@@ -51,7 +50,7 @@ p
 
 input[type=email]
   @extend .round-corners
-  margin-top: 4%
+  margin-top: 2%
   width: 30%
   padding: 10px
   background: rgba(255, 255, 255, 0.1)
@@ -77,7 +76,7 @@ input[type=email]
 input[type=submit]
   @extend .round-corners
   position: relative
-  top: 7px
+  top: 8px
   clear: both
   padding: 0px
   width: 10%
