--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -10,6 +10,6 @@
   %input{type: 'submit', value: '☺', id: 'signup-button'}
 
 %ul{id: 'social-media'}
-  = link_to image_tag('facebook.png'), 'http://www.facebook.com/uniqkid/', target: 'blank'
-  = link_to image_tag('pinterest.png'), 'http://www.pinterest.com/uniqkid/', target: 'blank'
-  = link_to image_tag('tumblr.png'), 'http://uniq-kid.tumblr.com', target: 'blank'
+  = link_to image_tag('facebook.svg'), 'http://www.facebook.com/uniqkid/', target: 'blank'
+  = link_to image_tag('pinterest.svg'), 'http://www.pinterest.com/uniqkid/', target: 'blank'
+  = link_to image_tag('tumblr.svg'), 'http://uniq-kid.tumblr.com', target: 'blank'
