change the mission statement

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,7 +3,9 @@
 
 = image_tag('Uniqkid_logo_final.png', id: 'logo')
 
-%p Uniqkid is a private non-for-profit recreational facility dedicated to building high quality social skills for those on the special needs spectrum. Center is designed for children and young adults of all ages. We believe that every child can be taught the skills they need for the future through interactive programming utilizing the arts and sciences, sports activities, pet intervention, and virtually connected programs with digital tracking and progress reports. Our goal is to engage everyone who walks through our doors by targeting realistic concerns and needs. We aim apply our personalized programming to help everyone - be it child or young adult - reach their highest individual potential.
+%p Uniqkid is a private non-for-profit* educational and recreational facility, dedicated to building high quality social skills programs for the community, with special needs. Our facility is designed to immerse children and young adults of all ages in interactive programs that give opportunities and a voice to all participants. Our goal is to engage youth with special needs in social and recreational activities where they can establish lasting results and reach their individual potentials.
+%br
+*Non-for-Profit Statues Pending*
 
 %form{id: 'signup-form'}
   %input{type: 'email', placeholder: 'Signup for the newsletter', required: 'required'}
