add the final mission statement

--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -3,9 +3,9 @@
 
 = image_tag('Uniqkid_logo_final.png', id: 'logo')
 
-%p Uniqkid is a private non-for-profit* educational and recreational facility, dedicated to building high quality social skills programs for the community, with special needs. Our facility is designed to immerse children and young adults of all ages in interactive programs that give opportunities and a voice to all participants. Our goal is to engage youth with special needs in social and recreational activities where they can establish lasting results and reach their individual potentials.
+%p Uniqkid is a private non-for-profit* educational and recreational facility dedicated to building social skills for those in the special needs community. Our center is designed for children, youth, and young adults. We believe that every child can develop the skills they need for the future through interactive programming utilizing academics, sports, and other alternative approaches, along with virtually connected programs encompassing digital tracking and progress reports. Our goal is to engage everyone who walks through our doors by targeting realistic concerns and needs. We aim to apply our personalized programming to help everyone - be it child, teen, or young adult - reach their highest individual potential
 %br
-*Non-for-Profit Statues Pending*
+*Pending Statues*
 
 %form{id: 'signup-form'}
   %input{type: 'email', placeholder: 'Signup for the newsletter', required: 'required'}
