--- a/app/views/welcome/index.html.haml
+++ b/app/views/welcome/index.html.haml
@@ -5,7 +5,7 @@
 
 %p Uniqkid is a private non-for-profit* educational and recreational facility dedicated to building social skills for those in the special needs community. Our center is designed for children, youth, and young adults. We believe that every child can develop the skills they need for the future through interactive programming utilizing academics, sports, and other alternative approaches, along with virtually connected programs encompassing digital tracking and progress reports. Our goal is to engage everyone who walks through our doors by targeting realistic concerns and needs. We aim to apply our personalized programming to help everyone - be it child, teen, or young adult - reach their highest individual potential
 %br
-*Pending Statues*
+*Pending Status*
 
 %form{id: 'signup-form'}
   %input{type: 'email', placeholder: 'Signup for the newsletter', required: 'required'}
