--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -5,7 +5,7 @@ $font: 'Josefin Sans', sans-serif
 $placeholder-color: #007E81
 $opacity: 0.7
 
-.round-corners
+%round-corners
   border-bottom-color: $border-color
   border-bottom-left-radius: 3px
   border-bottom-right-radius: 3px
@@ -49,7 +49,7 @@ p
   font-weight: 400
 
 input[type=email]
-  @extend .round-corners
+  @extend %round-corners
   margin-top: 2%
   width: 30%
   padding: 10px
@@ -74,7 +74,7 @@ input[type=email]
     color: $placeholder-color
 
 input[type=submit]
-  @extend .round-corners
+  @extend %round-corners
   position: relative
   top: 8px
   clear: both
